<resources>
    <string name="app_name">Toolbox</string>
    <string name="edit_message">ID/ Name</string>
    <string name="button_send">Suchen</string>
    <string name="show_All">Werkzeuge</string>
    <string name="machines">Maschinen</string>
    <string name="material">Materialien</string>
    <string name="title_activity_show_all_machines">ShowAllMachines</string>
    <string name="title_activity_show_all_material">ShowAllMaterial</string>
</resources>
